--- a/Blog.html
+++ b/Blog.html
@@ -15,10 +15,11 @@
     <!-- styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+  <!-- header -->
   <body>
     <header>
       <nav>
-        <a href="/">
+        <a href="./index.html">
           <img src="./images/Left.svg" alt="logo of John blog" />
         </a>
         <ul>
@@ -28,6 +29,7 @@
         </ul>
       </nav>
     </header>
+    <!-- blog section -->
     <main>
       <section>
         <h1>Blog</h1>
@@ -45,7 +47,6 @@
               </p>
             </article>
           </li>
-
           <li>
             <article>
               <h2>Post Title</h2>
@@ -88,7 +89,7 @@
         </ul>
       </section>
     </main>
-
+    <!-- footer -->
     <footer>
       <address>
         <ul>
