--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>John Creative Technologist</title>
+    <title>Work</title>
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,10 +15,11 @@
     <!-- styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+  <!-- header -->
   <body>
     <header>
       <nav>
-        <a href="/">
+        <a href="./index.html">
           <img src="./images/Left.svg" alt="logo of John blog" />
         </a>
         <ul>
@@ -28,11 +29,67 @@
         </ul>
       </nav>
     </header>
+    <!-- work section -->
     <main>
       <section>
         <h1>Work</h1>
+        <ul>
+          <li>
+            <article>
+              <img src="./images/dashboards.jpg" alt="фото екрану комютера" />
+              <h3>Designing Dashboards</h3>
+              <p>2020</p>
+              <p>Dashboard</p>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+                Exercitation veniam consequat sunt nostrud amet.
+              </p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <img src="./images/portraits.jpg" alt="фото екрану комютера" />
+              <h3>Vibrant Portraits</h3>
+              <p>2018</p>
+              <p>Illustration</p>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+                Exercitation veniam consequat sunt nostrud amet.
+              </p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <img src="./images/malayalam.jpg" alt="фото екрану комютера" />
+              <h3>36 Days of Malayalam Type</h3>
+              <p>2018</p>
+              <p>Typography</p>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+                Exercitation veniam consequat sunt nostrud amet.
+              </p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <img src="./images/components.jpg" alt="фото екрану комютера" />
+              <h3>Components</h3>
+              <p>2017</p>
+              <p>Components, Design</p>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+                Exercitation veniam consequat sunt nostrud amet.
+              </p>
+            </article>
+          </li>
+        </ul>
       </section>
     </main>
+    <!-- footer -->
     <footer>
       <address>
         <ul>
