--- a/work.html
+++ b/work.html
@@ -17,15 +17,21 @@
   </head>
   <!-- header -->
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">
+    <header class="header">
+      <nav class="header__nav">
+        <a class="header__link" href="./index.html">
           <img src="./images/Left.svg" alt="logo of John blog" />
         </a>
-        <ul>
-          <li><a class="link" href="./work.html">Work</a></li>
-          <li><a class="link" href="./Blog.html">Blog</a></li>
-          <li><a class="link" href="#">Contact</a></li>
+        <ul class="navigation__list list">
+          <li class="navigation__item">
+            <a class="navigation__link" href="./work.html">Work</a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link" href="./Blog.html">Blog</a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link" href="#">Contact</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -90,21 +96,21 @@
       </section>
     </main>
     <!-- footer -->
-    <footer>
-      <address>
-        <ul>
-          <li>
-            <a href="#">
+    <footer class="footer">
+      <address class="footer__address">
+        <ul class="footer__list list">
+          <li class="footer__item">
+            <a class="footer__link" href="#">
               <img src="./images/Figma.svg" alt="Figma" />
             </a>
           </li>
-          <li>
-            <a href="#">
+          <li class="footer__item">
+            <a class="footer__link" href="#">
               <img src="./images/Twitter.svg" alt="Twitter" />
             </a>
           </li>
-          <li>
-            <a href="#">
+          <li class="footer__item">
+            <a class="footer__link" href="#">
               <img src="./images/Instagram.svg" alt="Instagram" />
             </a>
           </li>
