--- a/index.html
+++ b/index.html
@@ -163,5 +163,6 @@
       <p>&copy; 2022 Your Name. All rights reserved.</p>
       </div>
     </footer>
+    <script src="./js/scriptry.js"></script>
   </body>
 </html>
